header and carrossel

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
             <a href=""><img src="assets/uk-flag.png" alt="english version"></a>
           </div>
         </div>
-        
       </div>
     </header>
+    <main class="mainContainner">
+      <section class="carrossel">
+        <a href=""><img src="assets/bd026cccf818c57b324e5489123853e4.webp" alt=""></a>
+      </section>
+    </main>
   </body>
 </html>
